--- a/source/css/components/_logo.sass
+++ b/source/css/components/_logo.sass
@@ -5,7 +5,7 @@ h1.logo
   text-align: center
 
 .logo--col
-  z-index: 3
+  z-index: 11
   background-color: $color-primary
   justify-content: left
   @include mq(medium)
